baseline model updated with comments and notebook updated with explanatory text

--- a/models/Baseline_9x_LinSVR/9xSVMBaseline.ipynb
+++ b/models/Baseline_9x_LinSVR/9xSVMBaseline.ipynb
@@ -58,6 +58,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, the corresponding dataframes, containing either image pairs or processed 150x150 images with their image IDs are loaded:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -76,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-test-Split."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -84,7 +98,16 @@
     "x= df[[\"image1_id\", \"image2_id\",\"pair\", \"building\"]]\n",
     "y= df[[\"fm1\",\"fm2\",\"fm3\",\"fm4\",\"fm5\",\"fm6\",\"fm7\",\"fm8\",\"fm9\"]]\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, train_size= 0.02, shuffle=True, random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, train_size= 0.2, shuffle=True, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training dataset is _only_ n = 500 pairings, although even a scene with only 300 images contains pairing data for (300^2)/2= *61250* image pairs. each of which containing *67500* features. \n",
+    "\n",
+    "Without dimensionality reduction, this otherwise takes a LOT of time."
    ]
   },
   {
@@ -96,8 +119,15 @@
     "n = 250\n",
     "x_train_short = x_train[0:min(n,x_train.shape[0])]\n",
     "y_train_short = y_train[0:min(n,y_train.shape[0])]\n",
-    "x_test_short = x_test[0:min(n,x_test.shape[0])]\n",
-    "y_test_short = y_test[0:min(n,y_test.shape[0])]"
+    "x_test_short = x_test[0:min(n*5,x_test.shape[0])]\n",
+    "y_test_short = y_test[0:min(n*5,y_test.shape[0])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Prediction is performed with 9 separately initialized LinearSVR models. these don't communicate with each other, as opposed to models capable of classifying/regressing for multiples targets."
    ]
   },
   {
@@ -110,9 +140,9 @@
      "output_type": "stream",
      "text": [
       "fitting dataset of 250 training entries\n",
-      "then predicting 250 test entries\n",
+      "then predicting 1250 test entries\n",
       "------------------------------\n",
-      "inflating 500 entries with images\n",
+      "inflating 1500 entries with images\n",
       "training data:\n",
       "starting inflating 🐡\n",
       "done inflating 💥\n",
@@ -120,9 +150,9 @@
       "starting inflating 🐡\n",
       "done inflating 💥\n",
       "------------------------------\n",
-      "initialising models...\n",
+      "initialising models... 🤖\n",
       "------------------------------\n",
-      "fitting model1 for fm1\n"
+      "fitting model1 for fm1 📐\n"
      ]
     },
     {
@@ -137,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicting\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model2 for fm2\n"
+      "fitting model2 for fm2 📐\n"
      ]
     },
     {
@@ -154,12 +184,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicting\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model3 for fm3\n",
-      "predicting\n",
+      "fitting model3 for fm3 📐\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model4 for fm4\n"
+      "fitting model4 for fm4 📐\n"
      ]
     },
     {
@@ -174,9 +204,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicting\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model5 for fm5\n"
+      "fitting model5 for fm5 📐\n"
      ]
     },
     {
@@ -191,25 +221,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicting\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model6 for fm6\n",
-      "predicting\n",
+      "fitting model6 for fm6 📐\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model7 for fm7\n",
-      "predicting\n",
+      "fitting model7 for fm7 📐\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model8 for fm8\n",
-      "predicting\n",
+      "fitting model8 for fm8 📐\n",
+      "predicting 🔮\n",
       "------------------------------\n",
-      "fitting model9 for fm9\n",
-      "predicting\n",
+      "fitting model9 for fm9 📐\n",
+      "predicting 🔮\n",
       "------------------------------\n"
      ]
     }
    ],
    "source": [
     "y_pred = model.fit_pred_9xLinSVR(x_train_short,x_test_short,y_train_short, images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for the imported evaluation metrics to properly work, some adjustments to the formatting need to be done:"
    ]
   },
   {
@@ -225,6 +262,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "validation metrics are used, as demonstrated in https://www.kaggle.com/code/tmyok1984/imc2022-validation-code/notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -233,13 +277,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mAA=0.00320 (n=250)\n"
+      "mAA=0.00536 (n=1250)\n"
      ]
     }
    ],
    "source": [
     "maa = validation.evaluate(input_dir, sample_id_list_all, fund_matrix_list_all)\n",
     "print(f'mAA={maa:.05f} (n={len(sample_id_list_all)})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as is apparent, the accuracy is abysmal.\n",
+    "The main reasons for this are probably:\n",
+    "- the small sample size, as explained above. Only using a small fraction of the actual data does not deliver an appropriate model, probably introducing bias.\n",
+    "- the model is too simple: although the predictor consists of 9 different SVMs, each fitting for every single pixel color channel, this is far from sophisticated enough to grasp the relative movement of objects within the images. This introduces even more bias.\n",
+    "- The data format here is extremely limiting to the applicability and clearly not appropriate for the dimensionality of the images. Actually using all provided data might take several days to compute, with a very limited chance of success. A proper dimensionality reduction is necessary for handling the image datasets.\n",
+    "- The data need sanitising first. I.e. images with a covisibility below 0.1 are not recommended for training, as stated by the competition hosts. Such image pairs are having insufficient overlap (or none at all). this weakens the model's predictive power even further. Additionally, small thumbnail images provide too little feature information to classify them properly.\n"
    ]
   }
  ],
