--- a/models/LoFTR/LoFTR.ipynb
+++ b/models/LoFTR/LoFTR.ipynb
@@ -53,14 +53,14 @@
     "# Load all image pairs, along with their covisibility and fundamental matrix\n",
     "\n",
     "#scenes = all_scenes # load all scenes\n",
-    "scenes = [all_scenes[6]] # load only the first scene\n",
+    "scenes = [all_scenes[6]] # load a specified scene\n",
     "\n",
     "pairs = preprocessing.load_pairs(scenes,input_dir)\n",
     "\n",
     "# Load either all pairs, or only withing a specific covisibility range\n",
-    "#pairs = pairs.reset_index()\n",
-    "#pairs = pairs.query('covisibility > 0.95').reset_index()\n",
-    "pairs = pairs.query('0.7 < covisibility < 0.8').reset_index()"
+    "#pairs = pairs.reset_index() # load all pairs\n",
+    "#pairs = pairs.query('covisibility > 0.95').reset_index() # load pairs with a covisibility over a specified value\n",
+    "pairs = pairs.query('0.7 < covisibility < 0.8').reset_index() # load pairs within a covisibility range"
    ]
   },
   {
